tests/checker/ok/extern_wasm_async.can
use wasi/filesystem/types

main = () -> Unit {
    "ok".print()
}
