tests/checker/fail/unknown_method.can
Unit => Program {
    5
        .bogus()
        .print()
}
